# automyte

./: CHANGELOG.md  README.md  pyproject.toml
src/automyte/: PLANS.md  __init__.py  main.py
src/automyte/automaton/: automaton.py  base.py  flow.py
src/automyte/config/: __init__.py  cmd.py  config.py  fields.py  vcs.py
src/automyte/config/builders/: __init__.py  cmd.py  env.py  file.py  metadata_parser.py
src/automyte/history/: base.py
src/automyte/project/: project.py
src/automyte/tasks/: __init__.py  vcs.py
src/automyte/tasks/flow_control/: __init__.py
src/automyte/tasks/utils/: filesystem.py
src/automyte/utils/: bash.py  config.py
src/automyte/vcs/: git.py
src/pygrate/config/: main.py
tests/: conftest.py  test_main.py
tests/automaton/: test_automaton.py
tests/config/: test_cmd.py  test_env_var.py  test_setup.py
tests/config/builders/: test_cmd.py  test_env_var.py  test_file.py
tests/discovery/file/: test_os_file.py
tests/examples/: test_simplest_setup.py  test_tasks_flow_showcase_03.py
tests/project/: test_project.py
tests/scenarios/: conftest.py  test_configuration.py  test_create_new_file.py  test_guards.py  test_history.py  test_simple_replace.py  test_targetting.py  test_vcs.py
tests/tasks/utils/: test_filesystem.py
