[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automyte"
description = ""
dynamic = ["version"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Artur Shyshko"},
]

[project.scripts]
automyte = "automyte:migrate"

[tool]
[tool.hatch]

[tool.hatch.version]
path = "src/automyte/__about__.py"

[tool.hatch.envs.tests]
dependencies = [
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/automyte"]
